16-Feb-2016 Fixes #140. To support VisualStudio 2015 changes to the distributed CRT libraries, VisualCCommon.IRuntimeLibraryPathMeta has been altered, requiring code changes to any usage of it. The function MSVCR returning a Bam.Core.TokenizedString is now called CRuntimePaths and returns a Bam.Core.TokenizedStringArray. This is to accomodate VisualStudio 2015 now returning the VisualC runtime library (vcruntime140.dll) and the universal crt from the WindowsSDK 10 (ucrtbase.dll). To future proof any changes to the C++ runtime libraries, MSVCP returning a Bam.Core.TokenizedString is now called CxxRuntimePaths and returns a Bam.Core.TokenizedStringArray. The recommended usage of these functions is a foreach loop, and collate each path returned. See the Test5 or InstallerTest1 examples for an illustration.

15-Feb-2016 InstallerTest1 updated to build two sets of installers, one with C only dependencies, and one with C++ dependencies. This is mostly to exercise the publishing of CRT DLLs with an installer.

12-Feb-2016 Fixes #137. ToolsVersion attribute written into .vcxproj and .vcxproj.filters is now part of the VisualC metadata. VisualC-12.0 has .vcxproj ToolsVersion 12.0, while VisualC-14.0 has 14.0. Both have filters ToolVersion of 4.0.

12-Feb-2016 Fixes #136. Added WindowsSDK-10. Note that this also references files from the 8.1 SDK version as well. VisualC-14.0 depends on WindowsSDK-10.

12-Feb-2016 Fixes #135. Each VisualC-N package specifies its WindowsSDK as there is general coherence between versions. VisualC-12.0 specifies WindowsSDK-8.1. Only specify a WindowsSDK version in a master package if you wish to override this default.

11-Feb-2016 Fixes #123. Common directory names used in different contexts in paths used in Bam.Core.ModuleGroup are no longer identified as the same solution folder in VisualStudio.
