@@ -1,3 +1,5 @@
+16-Feb-2016 Fixes #141. Before cleaning the build root (command line option -c|--clean), all files within it are stripped of the read-only attribute, to avoid an error occurring. Read-only files may have been introduced from a previous build using a collation module that preserved file attributes.
+
 16-Feb-2016 Fixes #140. To support VisualStudio 2015 changes to the distributed CRT libraries, VisualCCommon.IRuntimeLibraryPathMeta has been altered, requiring code changes to any usage of it. The function MSVCR returning a Bam.Core.TokenizedString is now called CRuntimePaths and returns a Bam.Core.TokenizedStringArray. This is to accomodate VisualStudio 2015 now returning the VisualC runtime library (vcruntime140.dll) and the universal crt from the WindowsSDK 10 (ucrtbase.dll). To future proof any changes to the C++ runtime libraries, MSVCP returning a Bam.Core.TokenizedString is now called CxxRuntimePaths and returns a Bam.Core.TokenizedStringArray. The recommended usage of these functions is a foreach loop, and collate each path returned. See the Test5 or InstallerTest1 examples for an illustration.
 
 15-Feb-2016 InstallerTest1 updated to build two sets of installers, one with C only dependencies, and one with C++ dependencies. This is mostly to exercise the publishing of CRT DLLs with an installer.
